Scala Reale first implementation (card images missing because of theft)

--- a/carte/templates/game.html
+++ b/carte/templates/game.html
@@ -11,6 +11,7 @@
   <section
     id="game-area"
     data-game="{{ game }}"
+    data-card-family="{{ card_family }}"
     data-card-type="{{ card_type }}"
   >
     <div id="new-game">
